selfhost/test/parser/set_error_no_rbrace.out
Error at %FILE_NAME%:1:7
Unexpected token ']', expected one of ',', '}':
  |  #{1, 2]
           ^